--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 Hello there, awesome person!
+
 <html>
 
-    <body>
++    <head>
 
-        The HTML content goes here.
++        <title>My awesome web page</title>
 
-    </body>
 
-</html>
++    </head><html>
+
++   
