--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@ Hello there, awesome person!
 
 +        <title>My awesome web page</title>
 
++    </head>
+<body>
 
-+    </head><html>
+<img src="https://octodex.github.com/images/vinyltocat.png">
+</body>
+
+<html>
 
 +   
