--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@ Hello there, awesome person!
 
 +    </head>
 <body>
-
+<ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
 <img src="https://octodex.github.com/images/vinyltocat.png">
 </body>
 
