--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ Hello there, awesome person!
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
+  ```
+  <li><a href="https://github.com">This is a link to GitHub!</a></li>
+  ```
 <img src="https://octodex.github.com/images/vinyltocat.png">
 </body>
 
