--- a/index.html
+++ b/index.html
@@ -2,25 +2,23 @@ Hello there, awesome person!
 
 <html>
 
-+    <head>
+  <head>
 
        <h1>I'm a header 1!</h1>
 
-+        <title>My awesome web page</title>
+       <title>My awesome web page</title>
 
-+    </head>
+  </head>
 <body>
 <ol>
     <li>This</li>
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
-  ```
+  
   <li><a href="https://github.com">This is a link to GitHub!</a></li>
-  ```
+  
 <img src="https://octodex.github.com/images/vinyltocat.png">
 </body>
 
 <html>
-
-+   
