--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ Hello there, awesome person!
 
   <head>
 
+    
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    
        <h1>I'm a header 1!</h1>
 
        <title>My awesome web page</title>
